Fix dropdown text overflow

--- a/demo/frontend/src/app/components/asker/asker.component.scss
+++ b/demo/frontend/src/app/components/asker/asker.component.scss
@@ -65,6 +65,13 @@
 .previous-questions {
     .prev-question {
         justify-content: flex-start;
+        
+
+        span {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
         tui-svg {
             color: var(--tui-base-04);
